Fix frontend UI bugs, fix backend CORS, configure Kafka deserialization, disable spring security